# Udata

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.playwright-mcp/: page-2026-06-13T04-45-27-442Z.yml  page-2026-06-13T04-45-40-413Z.yml  page-2026-06-13T04-46-08-734Z.yml  page-2026-06-13T04-46-30-961Z.yml  page-2026-06-13T04-47-02-009Z.yml
docs/: data_type_source_map.md  legal_notes.md  source_matrix.md  vn_stock_unstructured_data_guide (1).md
spikes/: README.md  _common.py  spike_baodautu.py  spike_cbtt.py  spike_compliance.py  spike_dt_cbtt.py  spike_dt_news.py  spike_dt_research.py  spike_dt_resolution.py  spike_hnx_vsdc.py  spike_ticker.py  spike_tinnhanhchungkhoan.py  spike_vietstock.py  spike_vndirect.py  spike_vneconomy.py
spikes/samples/: baodautu.html  cbtt_hose.html  cbtt_hose.json  cbtt_hose_rendered.html  cbtt_vsdc.html  hnx_attach_619724.html  hnx_attach_619726.html  hnx_attach_619730.html  hnx_detail_619730.html  hnx_disclosures_page.html  hnx_list_page1.html  hnx_rendered.html  news_sample.json  research_recommendations.json  tinnhanhchungkhoan.xml  vietstock.xml  vndirect.json  vneconomy.xml  vsdc_rendered.html
spikes/samples/robots/: baodautu.txt  tinnhanhchungkhoan.txt  vietstock.txt  vneconomy.txt
