[project]
name = "udata"
version = "0.0.1"
description = "Survey-week spikes for collecting Vietnamese equity news (unstructured data). Throwaway scripts only — no production code yet."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "selectolax>=0.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.8",
    "playwright>=1.44",
]

[tool.udata]
# This is a research/survey repo. spikes/ holds independent throwaway probes,
# one file per source. No collector/pipeline module exists yet — by design.
